kubernetes/kubeconfigs/simple-yamls/44-application-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-training-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: kube-training
spec:
  rules:
    - host: kube.training.com
      http:
        paths:
          - path: /api/country
            backend:
              serviceName: country-srv
              servicePort: 8080
          - path: /api/city
            backend:
              serviceName: city-srv
              servicePort: 8080
